<resources>

    <string name="app_name">AndroidDemo</string>
	<string name="demo_1">Activity与Service通信</string>
	<string name="demo_1_btn_start">通过广播方式start</string>
	<string name="demo_1_btn_pause">通过广播方式pause</string>
	
	<string name="demo_1_btn_bind1">通过Messenger方式bind service</string>
	<string name="demo_1_btn_start1">通过Messenger方式start</string>
	<string name="demo_1_btn_pause1">通过Messenger方式pause</string>
	
	<string name="demo_1_btn_bind2">通过接口回调方式bind service</string>
	<string name="demo_1_btn_start2">通过接口回调方式start</string>
	<string name="demo_1_btn_pause2">通过接口回调方式pause</string>
	
	<string name="demo_2">sensor传感器</string>
	
	<string name="demo_3">AlarmManager学习</string>
	
	<string name="demo_4">Simple MVP学习</string>
	
	<string name="demo_5">显示或隐藏应用图标 </string>
	
	<string name="demo_6">ScreenShot demo </string>
	
	<string name="demo_7">调节屏幕亮度 </string>
	
	<string name="demo_8">simple Retrofit demo </string>
	
	<string name="demo_9">简易课程表 </string>
	
	<string name="demo_10">媒体按键事件接收 </string>
	
	<string name="demo_11">新增联系人 </string>
	
	<string name="demo_12">快捷图标操作 </string>
</resources>
