<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_start" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_pause" />

    <Button
        android:id="@+id/btn_bind1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_bind1" />

    <Button
        android:id="@+id/btn_start1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_start1" />

    <Button
        android:id="@+id/btn_pause1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_pause1" />

    <Button
        android:id="@+id/btn_bind2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_bind2" />

    <Button
        android:id="@+id/btn_start2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_start2" />

    <Button
        android:id="@+id/btn_pause2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_btn_pause2" />

</LinearLayout>