<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_margin="10dp"
        >
        
        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_1"
            />
        
        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_2"
            />
        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_3"
            />
        <Button
            android:id="@+id/btn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_4"
            />
        
        <Button
            android:id="@+id/btn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_5"
            />
        <Button
            android:id="@+id/btn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_6"
            />
        <Button
            android:id="@+id/btn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_7"
            />
        <Button
            android:id="@+id/btn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_8"
            />
    </LinearLayout>
    

</ScrollView>
